initial changes to allow force password reset

--- a/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
@@ -1,9 +1,11 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Resetting your password{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}TITLE CONTENT HERE{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
 <div class="govuk-width-container">
+
+    {{ include('@partials/account-bar.html.twig') }}
     {{ include('@partials/welsh-switch.html.twig') }}
 
     <div role="navigation" aria-labelledby="back-link-navigation">
@@ -13,31 +15,25 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-
-                {{ govuk_error_summary(form) }}
+                <h1 class="govuk-heading-xl">{% trans %}We would like you to reset your password{% endtrans %}</h1>
+                <p> CONTENT HERE </p>
 
                 {{ govuk_form_open(form) }}
                     <fieldset class="govuk-fieldset">
 
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-                            <h1 class="govuk-fieldset__heading">
-                                {% trans %}Reset your password{% endtrans %}
-                            </h1>
-                        </legend>
-
-                        <p class="govuk-body">{% trans %}Enter your email address below. If there's an account associated with the address, we'll send you a link to reset your password.{% endtrans %}</p>
-
                         {{ govuk_form_element(form.get('__csrf')) }}
 
-                        {{ govuk_form_element(form.get('email'), { 'label': 'Email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds'} }) }}
-
-                        {{ govuk_form_element(form.get('email_confirm'), { 'label': 'Confirm your email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds' } }) }}
+                        <input type="hidden" name="email" value="{{ form.get('email').value }}">
+                        <input type="hidden" name="email_confirm" value="{{ form.get('email_confirm').value }}">
+                        <input type="hidden" name="forced" value="true">
 
                         <button type="submit" class="govuk-button">
                             {% trans %}Email me the link{% endtrans %}
                         </button>
                     </fieldset>
                 {{ govuk_form_close() }}
+
+
             </div>
         </div>
     </main>
