--- a/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}TITLE CONTENT HERE{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}Reset your password{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
 <div class="govuk-width-container">
@@ -15,22 +15,24 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">{% trans %}We would like you to reset your password{% endtrans %}</h1>
-                <p> CONTENT HERE </p>
+                <h1 class="govuk-heading-xl">Reset your password</h1>
+                <p class="govuk-body">Keeping our online services secure is very important to us. We’ve identified a potential security issue that affects a small number of accounts on the Use a lasting power of attorney service.</p>
 
+                <p class="govuk-body">Your password, LPAs and personal data <strong>have not</strong> been accessed.</p>
+
+                <p class="govuk-body">However, as a precaution, the next time you use the service, you’ll be asked to change your password. Please do not reuse your old password.</p>
+
+                <p class="govuk-body">Click the button below and we'll email you a link to reset your password.</p>
                 {{ govuk_form_open(form) }}
-                    <fieldset class="govuk-fieldset">
+                    {{ govuk_form_element(form.get('__csrf')) }}
 
-                        {{ govuk_form_element(form.get('__csrf')) }}
+                    <input type="hidden" name="email" value="{{ form.get('email').value }}">
+                    <input type="hidden" name="email_confirm" value="{{ form.get('email_confirm').value }}">
+                    <input type="hidden" name="forced" value="true">
 
-                        <input type="hidden" name="email" value="{{ form.get('email').value }}">
-                        <input type="hidden" name="email_confirm" value="{{ form.get('email_confirm').value }}">
-                        <input type="hidden" name="forced" value="true">
-
-                        <button type="submit" class="govuk-button">
-                            {% trans %}Email me the link{% endtrans %}
-                        </button>
-                    </fieldset>
+                    <button type="submit" class="govuk-button">
+                        {% trans %}Email me the link{% endtrans %}
+                    </button>
                 {{ govuk_form_close() }}
 
 
