--- a/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
@@ -15,7 +15,7 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <h1 class="govuk-heading-xl">Change your password</h1>
+                <h1 class="govuk-heading-xl">{% trans %}Change your password{% endtrans %}</h1>
                 <p class="govuk-body">Keeping our online services secure is very important to us. We’ve identified a potential security concern that affects a small number of accounts on the Use a lasting power of attorney service.</p>
 
                 <p class="govuk-body">Your password, LPAs and personal data <strong>have not</strong> been accessed.</p>
