Use Uchenna's latest text suggestions

--- a/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/force-password-reset-page.html.twig
@@ -22,7 +22,8 @@
 
                 <p class="govuk-body">However, as a precaution, you need to change your password. Please do not reuse your old password.</p>
 
-                <p class="govuk-body">Click the button below and we'll email you a link to change your password.</p>
+                <p class="govuk-body">We'll email you a link to change your password.</p>
+
                 {{ govuk_form_open(form) }}
                     {{ govuk_form_element(form.get('__csrf')) }}
 
@@ -34,8 +35,6 @@
                         {% trans %}Email me the link{% endtrans %}
                     </button>
                 {{ govuk_form_close() }}
-
-
             </div>
         </div>
     </main>
