Uml 2664 check for password reset (#1839)
* initial changes to allow force password reset

* log user out after password reset and remove NeedsReset flag, fixed tests broken from cleanup of other code

* lint errors fixed

* add cy template for force password reset

* Behat UI test added in for password needs reset feature, a user record seeded for test

* First part of tests for middleware

* Move test to correct location

* Add test for rest of code paths

* Add test file for AuthenticationMiddleware, and change out some code to use an interface because a class we were using was marked final.

* cleanup user service psalm errors

* edit force password reset page with new content

* Content tweaks to change password page.

* Translate title

* fix test after content change

* lint errors fixed

* Fix up method properties

* Use Uchenna's latest text suggestions

* Use constructor property promotion in touched files of API

Co-authored-by: SeemaMenon <seema.menon@digital.justice.gov.uk>
Co-authored-by: Adam Cooper <adam.cooper@digital.justice.gov.uk>

--- a/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
@@ -27,7 +27,7 @@
 
                         <p class="govuk-body">{% trans %}Enter your email address below. If there's an account associated with the address, we'll send you a link to reset your password.{% endtrans %}</p>
 
-                        <input type="hidden" name="__csrf" value="{{ form.get('__csrf').value }}">
+                        {{ govuk_form_element(form.get('__csrf')) }}
 
                         {{ govuk_form_element(form.get('email'), { 'label': 'Email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds'} }) }}
 
