--- a/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/check-details-and-consent.html.twig
@@ -36,14 +36,16 @@
                                     {% trans %}Address on paper LPA{% endtrans %}
                                 </dt>
                                 <dd class="govuk-summary-list__value">
-                                    {%  if data.address_on_paper is defined %}
+                                    {% if data.actor_address_response == 'Not sure' %}
+                                        {% trans %}Not sure{% endtrans %}
+                                    {% elseif data.address_on_paper is defined %}
                                         <pre class="govuk-body">{{ data.address_on_paper }}</pre>
                                     {% else %}
                                         {% trans %}Same as above{% endtrans %}
                                     {% endif %}
                                 </dd>
                                 <dd class="govuk-summary-list__actions">
-                                    <a class="govuk-link" id="change-address-on-paper" href="{{ data.address_on_paper is defined ? path('lpa.add.address-on-paper') : path('lpa.add.actor-address') }}">
+                                    <a class="govuk-link" id="change-address-on-paper" href="{{ data.actor_address_response == 'No' ? path('lpa.add.address-on-paper') : path('lpa.add.actor-address') }}">
                                         {% if data.address_on_paper is defined %}
                                             {% trans %}Change<span class="govuk-visually-hidden"> address on paper LPA</span>{% endtrans %}
                                         {% else %}
