--- a/service-front/app/src/Actor/templates/actor/request-email-change-success.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-email-change-success.html.twig
@@ -16,7 +16,7 @@
 
                     <p class="govuk-body">{% trans %}You’ve asked us to change your email address.{% endtrans %}</p>
 
-                    <p class="govuk-body">{% trans with {'%email%': newEmail } %}We've emailed a link to %email% – please follow the link in the email to confirm the change.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans with {'%email%': newEmail } %}We've emailed a link to <strong class="govuk-!-font-weight-bold">%email%</strong> – please follow the link in the email to confirm the change.{% endtrans %}</p>
 
                     <p class="govuk-body">{% trans %}The email should arrive in a few minutes, check your spam, bulk and junk folders.{% endtrans %}</p>
 
