Instructions and preferennces messages made more evident accross pages

--- a/service-front/app/src/Actor/templates/actor/lpa-create-viewercode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-create-viewercode.html.twig
@@ -57,12 +57,22 @@
                         </fieldset>
                     </div>
 
+                    {% if lpa.applicationHasRestrictions or lpa.applicationHasGuidance %}
+                    <div class="govuk-warning-text">
+                        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                        <strong class="govuk-warning-text__text">
+                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
+                        </strong>
+                    </div>
+                    {% endif %}
+
                     <div class="govuk-warning-text">
                         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                         <strong class="govuk-warning-text__text">
                             <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
                             {% trans %}
-                                This is a new service, check that the organisation will accept an online summary of the<abbr title="lasting power of attorney">LPA</abbr> and how they want to receive the access code you make for them.
+                                Check that the organisation will accept an online summary of the<abbr title="lasting power of attorney">LPA</abbr> and how they want to receive the access code you make for them.
                             {% endtrans %}
                         </strong>
                     </div>
