--- a/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
@@ -65,6 +65,16 @@
 
                             <p class="govuk-body">{% trans %}Give an organisation their access code so they can view this LPA. They should go to www.gov.uk/view-lpa to use the code.{% endtrans %}</p>
 
+                            {% if lpa.applicationHasRestrictions or lpa.applicationHasGuidance %}
+                            <div class="govuk-warning-text">
+                                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                                <strong class="govuk-warning-text__text">
+                                    <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                                    {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
+                                </strong>
+                            </div>
+                            {% endif %}
+
                             <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default-1" data-opentext="{% trans %}Open all{% notes %}Accordion label{% endtrans%}" data-closetext="{% trans %}Close all{% notes %}Accordion label{% endtrans %}" data-sectiontext="{% trans %}active code details{% notes %}Accordion label{% endtrans %}">
                                 {% for code in shareCodes %}
                                     {% set id_counter = ( id_counter | default(0) ) + 1 %}
