--- a/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-dashboard.html.twig
@@ -71,6 +71,7 @@
                             {% set caseSubtype = lpa.caseSubtype == 'pfa' ? 'Property and finance'| trans : 'Health and welfare'| trans %}
                             {% set applicationHasRestrictions = lpa.applicationHasRestrictions %}
                             {% set applicationHasGuidance = lpa.applicationHasGuidance %}
+                            {% set lpaDonorSignatureDate = lpa.lpaDonorSignatureDate %}
 
                     <article class="moj-ticket-panel" aria-label="Added lpa list">
                         {% if actorActive %}
