--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -47,9 +47,9 @@
             <div class="govuk-grid-row lpa-valid-border">
                 <div class="govuk-grid-column-full column-full-alt-1">
                     {% if lpa.caseSubtype == "pfa" and lpa.attorneyActDecisions|lower == 'when registered' %}
-                            <h2 class="govuk-heading-m heading-m-alt-1">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered and can be used now{% endtrans %}</h2>
+                        <h2 class="govuk-heading-m heading-m-alt-1">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered and can be used now{% endtrans %}</h2>
                     {% else %}
-                            <h2 class="govuk-heading-m heading-m-alt-1">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered{% endtrans %}</h2>
+                        <h2 class="govuk-heading-m heading-m-alt-1">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered{% endtrans %}</h2>
                     {% endif %}
 
                     <p class="govuk-body body-alt-1">
@@ -72,6 +72,9 @@
                                 {% trans %}The attorneys do NOT have the authority to make decisions about life-sustaining treatment{% endtrans %}
                             {% endif %}
                         {% endif %}
+                    </p>
+                    <p class="govuk-body body-alt-1">
+                        {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
                     </p>
                 </div>
             </div>
