--- a/service-front/app/src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/lpa-instructions-preferences-important-message.html.twig
@@ -1,6 +1,9 @@
 {% if not is_donor_signature_date_too_old(lpa) and actorActive and lpa.applicationHasRestrictions and not lpa.applicationHasGuidance %}
-    <p class="govuk-body govuk-!-margin-bottom-1">{% trans %}
-            <strong>Important: </strong>This LPA has instructions. You might need to show organisations the paper LPA.{% endtrans %}
+    <p class="govuk-body govuk-!-margin-bottom-1">
+        {% trans %}
+            <strong>Important: </strong>This LPA has instructions.<br>
+            You might need to show organisations the paper LPA.
+        {% endtrans %}
         <a class="govuk-link" href="{{ path('lpa.instructions-preferences') }}"
            data-gaEventType="onClick"
            data-gaAction="Clicked Link"
@@ -10,8 +13,11 @@
     </p>
 {% endif %}
 {% if not is_donor_signature_date_too_old(lpa) and actorActive and lpa.applicationHasGuidance and not lpa.applicationHasRestrictions %}
-    <p class="govuk-body govuk-!-margin-bottom-1">{% trans %}
-            <strong>Important: </strong>This LPA has preferences. You might need to show organisations the paper LPA.{% endtrans %}
+    <p class="govuk-body govuk-!-margin-bottom-1">
+        {% trans %}
+            <strong>Important: </strong>This LPA has preferences.<br>
+            You might need to show organisations the paper LPA.
+        {% endtrans %}
         <a class="govuk-link" href="{{ path('lpa.instructions-preferences') }}"
            data-gaEventType="onClick"
            data-gaAction="Clicked Link"
@@ -21,8 +27,11 @@
     </p>
 {% endif %}
 {% if not is_donor_signature_date_too_old(lpa) and actorActive and lpa.applicationHasRestrictions and lpa.applicationHasGuidance %}
-    <p class="govuk-body govuk-!-margin-bottom-1">{% trans %}
-            <strong>Important: </strong>This LPA has instructions and preferences. You might need to show organisations the paper LPA.{% endtrans %}
+    <p class="govuk-body govuk-!-margin-bottom-1">
+        {% trans %}
+            <strong>Important: </strong>This LPA has instructions and preferences.<br>
+            You might need to show organisations the paper LPA.
+        {% endtrans %}
         <a class="govuk-link" href="{{ path('lpa.instructions-preferences') }}"
            data-gaEventType="onClick"
            data-gaAction="Clicked Link"
@@ -32,8 +41,11 @@
     </p>
 {% endif %}
 {% if actorActive and is_donor_signature_date_too_old(lpa) and (lpa.applicationHasRestrictions or lpa.applicationHasGuidance) %}
-    <p class="govuk-body govuk-!-margin-bottom-1">{% trans %}
-            <strong>Important: </strong>This LPA has instructions or preferences. You might need to show organisations the paper LPA.{% endtrans %}
+    <p class="govuk-body govuk-!-margin-bottom-1">
+        {% trans %}
+            <strong>Important: </strong>This LPA has instructions or preferences.<br>
+            You might need to show organisations the paper LPA.
+        {% endtrans %}
         <a class="govuk-link" href="{{ path('lpa.instructions-preferences') }}"
            data-gaEventType="onClick"
            data-gaAction="Clicked Link"
