--- a/service-front/app/src/Actor/templates/actor/change-lpa-details.html.twig
+++ b/service-front/app/src/Actor/templates/actor/change-lpa-details.html.twig
@@ -41,7 +41,16 @@
                     </p>
 
                     <h2 class="govuk-heading-m">{% trans %}How to let us know{% endtrans %}</h2>
-                    <p class="govuk-body">{% trans %}When you get in touch, quote the LPA reference number.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans %}Contact us through any of the ways below.{% endtrans %}</p>
+                    <p class="govuk-body">{% trans %}When you get in touch, you’ll need to tell us:{% endtrans %}</p>
+                    <ul class="govuk-list govuk-list--bullet">
+                        <li>{% trans %}the LPA reference number{% endtrans %}</li>
+                        <li>{% trans %}your name{% endtrans %}</li>
+                        <li>{% trans %}your role (ie, whether you are the donor or an attorney){% endtrans %}</li>
+                        <li>{% trans %}the donor’s name (if you are not the donor){% endtrans %}</li>
+                        <li>{% trans %}the donor’s date of birth{% endtrans %}</li>
+                        <li>{% trans %}the donor’s address and postcode{% endtrans %}</li>
+                    </ul>
 
                     {{ include('@partials/contact-details/contact-details.html.twig') }}
                 </div>
