--- a/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
@@ -13,11 +13,13 @@
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
 
-            <div class="govuk-grid-row">
+            <div class="govuk-grid-row govuk-!-margin-top-0 govuk-!-padding-bottom-0">
+
                 <div class="govuk-grid-column-two-thirds">
-                  <span class="govuk-caption-l">{{ lpa.caseSubtype == 'pfa' ? 'Property and finance' | trans : 'Health and welfare' | trans  }}</span>
-                  <span class="govuk-heading-l govuk-!-margin-bottom-3">{{ actor_name(lpa.donor, false) }}</span>
+                    <span class="govuk-caption-xl govuk-!-margin-bottom-3 govuk-!-margin-top-0">{{ actor_name(lpa.donor, false) }}, {{ lpa.caseSubtype == 'pfa' ? 'Property and finance' | trans : 'Health and welfare' | trans }}</span>
+                    <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{% trans %}Your access code{% endtrans %}</h1>
                 </div>
+
             </div>
 
             {{ include('@actor/partials/lpa-sub-navigation.html.twig') }}
@@ -31,16 +33,14 @@
                                     <input readonly type="text" value="{{ add_hyphen_to_viewer_code(code) }}" class="js-accesscodecopy-value offscreen" aria-hidden="true" tabindex="-1">
                                 </label>
                                 <button class="js-accesscodecopy-button govuk-button govuk-button__copy">
-                                    <span class="js-accesscodecopy-default">{% trans %}Copy code{% endtrans %}</span>
-                                    <span class="js-accesscodecopy-success hide">{% trans %}Code copied{% endtrans %}</span>
+                                    <span class="js-accesscodecopy-default govuk-!-margin-0">{% trans %}Copy code{% endtrans %}</span>
+                                    <span class="js-accesscodecopy-success govuk-!-margin-0 hide">{% trans %}Code copied{% endtrans %}</span>
                                 </button>
                             </div>
-                            <h1 class="govuk-panel__body govuk-!-margin-top-0 govuk-!-margin-bottom-2">
-                                {% trans with {'%organisation%': organisation } %}Give this access code to %organisation%{% endtrans %}
-                            </h1>
-                            <span class="govuk-panel__title">
+                            <h2 class="govuk-heading-l govuk-!-margin-top-0 govuk-!-margin-bottom-2">
+                                {% trans with {'%organisation%': organisation } %}Give this access code to %organisation%{% endtrans %}<br>
                                 {{ add_hyphen_to_viewer_code(code) }}
-                            </span>
+                            </h2>
                             <p class="govuk-body govuk-!-margin-top-1 govuk-!-margin-bottom-3">{% trans with {'%date%': lpa_date(expires)} %}This code expires in 30 days, on %date%.{% endtrans %}</p>
                         </div>
                     </div>
