check access codes and view lpa summary

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -14,25 +14,16 @@
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
 
-        <div class="govuk-grid-row">
+        <div class="govuk-grid-row govuk-!-margin-top-0 govuk-!-padding-bottom-0">
+
             <div class="govuk-grid-column-two-thirds">
-                <span class="govuk-caption-l">
-                    {% if lpa.caseSubtype == "pfa" %}
-                        {% trans %}Property and finance{% endtrans %}
-                    {% else %}
-                        {% trans %}Health and welfare{% endtrans %}
-                    {% endif %}
-                </span>
-                <span class="govuk-heading-l govuk-!-margin-bottom-3">{{ actor_name(lpa.donor, false) }}</span>
+                <span class="govuk-caption-xl govuk-!-margin-bottom-3 govuk-!-margin-top-0">{{ actor_name(lpa.donor, false) }}, {{ lpa.caseSubtype == 'pfa' ? 'Property and finance' | trans : 'Health and welfare' | trans }}</span>
+                <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{% trans %}<abbr title="lasting power of attorney">LPA</abbr> summary{% endtrans %}</h1>
             </div>
+
         </div>
 
         {{ include('@actor/partials/lpa-sub-navigation.html.twig') }}
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <h1 class="govuk-heading-xl">{% trans %}<abbr title="lasting power of attorney">LPA</abbr> summary{% endtrans %}</h1>
-            </div>
-        </div>
 
         {% if is_lpa_cancelled(lpa) %}
 
