--- a/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
@@ -14,6 +14,10 @@
                 <div class="govuk-grid-column-two-thirds">
                     <h1 class="govuk-heading-xl">{% trans %}Are you sure you want to remove this LPA?{% endtrans %}</h1>
 
+                    <p class="govuk-body"><strong>Donor:</strong> {{ lpa.getDonor.firstname }} {{ lpa.getDonor.surname }}</p>
+
+                    <p class="govuk-body"><strong>LPA type:</strong> {{ lpa_type_full_name(lpa.getCaseSubtype()) }}</p>
+
                     {% if lpa is not null and lpa.status|lower == 'registered' %}
                         <p class="govuk-body">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered{% endtrans %}</p>
                     {% endif %}
