--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -17,10 +17,9 @@
                     {% trans %}This health and welfare LPA has been cancelled{% endtrans %}
                 {% endif %}
             </h1>
+            <div class="govuk-panel__body govuk-!-font-size-24">
             {% if lpa.cancellationDate is not null %}
-                <div class="govuk-caption-l govuk-panel__body">
-                    <strong>{% trans with {'%cancellationDate%': lpa_date(lpa.cancellationDate)} %}Cancelled on %cancellationDate%{% endtrans %}</strong>
-                </div>
+                <strong>{% trans with {'%cancellationDate%': lpa_date(lpa.cancellationDate)} %}Cancelled on %cancellationDate%{% endtrans %}</strong>
             {% endif %}
 
         {% else %}
@@ -56,7 +55,7 @@
                     {% endif %}
                 </p>
 
-
+        {% endif %}
 
                 {% if lpa.applicationHasGuidance or lpa.applicationHasRestrictions %}
                     <p class="govuk-!-font-size-24 govuk-!-font-weight-bold">
@@ -75,7 +74,6 @@
 
             </div>
 
-        {% endif %}
     </div>
 
 
