--- a/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
@@ -12,11 +12,14 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    <h1 class="govuk-heading-xl">{% trans %}Are you sure you want to remove this LPA?{% endtrans %}</h1>
+                    <h1 class="govuk-heading-xl">{% trans with
+                            {
+                                '%firstname%': lpa.getDonor.firstname,
+                                '%surname%': lpa.getDonor.surname,
+                            }
+                        %}Are you sure you want to remove %firstname% %surname%'s LPA?{% endtrans %}</h1>
 
-                    <p class="govuk-body"><strong>Donor:</strong> {{ lpa.getDonor.firstname }} {{ lpa.getDonor.surname }}</p>
-
-                    <p class="govuk-body"><strong>LPA type:</strong> {{ lpa_type_full_name(lpa.getCaseSubtype()) }}</p>
+                    <p class="govuk-body"><strong>{% trans %}LPA type:{% endtrans %}</strong> {{ lpa_type_full_name(lpa.getCaseSubtype())|trans }}</p>
 
                     {% if lpa is not null and lpa.status|lower == 'registered' %}
                         <p class="govuk-body">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered{% endtrans %}</p>
