--- a/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
@@ -19,7 +19,7 @@
                             }
                         %}Are you sure you want to remove %firstname% %surname%'s LPA?{% endtrans %}</h1>
 
-                    <p class="govuk-body"><strong>{% trans %}LPA type:{% endtrans %}</strong> {{ lpa_type_full_name(lpa.getCaseSubtype())|trans }}</p>
+                    <p class="govuk-body"><strong>{% trans %}LPA type:{% endtrans %}</strong> {{ lpaType }}</p>
 
                     {% if lpa is not null and lpa.status|lower == 'registered' %}
                         <p class="govuk-body">{% trans %}This <abbr title="lasting power of attorney">LPA</abbr> is registered{% endtrans %}</p>
